# tuinbouwer

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  Pipfile  README.md  cdk.json  example.env  flask.wsgi  platformio.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
frontend/: Makefile  README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: main.css  variables.css
frontend/src/components/: Chart.vue  Overview.vue  SpaceLog.vue  SpacesOverview.vue
migrations/versions/: 037af9b501ce_add_sensor_log_table.py  89163b11ac66_inital_migration.py  97beb28bd6c3_add_plants_table.py  c1f1bcb0e48c_add_plant_table.py  ea89dffc8e75_initial_migration.py
raspberry_pi_sensor/: setup.py
raspberry_pi_sensor/src/tuinbouwer_sensor/: api.py
sensor/: Pipfile
sensor/src/tuinbouwer_sensor/: __init__.py  jobs.py  sensor.py
server/: Makefile  cdk.py  example.env  pyproject.toml
server/frontend/: package-lock.json
server/frontend/src/: App.vue
server/frontend/src/components/: SpaceLog.vue  SpacesOverview.vue
server/migrations/versions/: 0315a2a66fa9_add_date_time_in_sensor_log.py  13c555c2aab0_add_joined_sensor_log_tables.py  f55c254c3edd_add_min_max_to_sensor.py
server/src/tuinbouwer_server_api/: __main__.py  functions.py  scheduler.py
server/src/tuinbouwer_server_api/blueprints/api/: __init__.py  frontend.py
server/tests/: test_models.py
server_api/: Pipfile  README.md  requirements.txt
server_api/frontend/: package.json
server_api/src/tuinbouwer_server_api/: __init__.py
server_api/src/tuinbouwer_server_api/blueprints/api/: frontend.py
src/: format.h  main.cpp  temp_1  temp_2
src/tuinbouw_server_api/: __init__.py  models.py  sensor_api.py
src/tuinbouwer_sensor/: __init__.py  __main__.py  api.py  application.py
src/tuinbouwer_server_api/: __init__.py  functions.py  models.py  scheduler.py  sensor_api.py
src/tuinbouwer_server_api/blueprints/: frontend.py
src/tuinbouwer_server_api/blueprints/api/: frontend.py  sensor.py
src/tuinbouwer_server_api/blueprints/website/: __init__.py  frontend.py
tests/: conftest.py  test_functions.py  test_models.py  test_sensor_api.py
wemos_sensor/: platformio.ini
wemos_sensor/src/: format.cpp  wifi.cpp  wifi.h
