[tool.poetry]
name = "tuinbouwer_server_api"
version = "0.1.0"
description = "Tuinbouw server API"
authors = ["JoostSijm <joostsijm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-apscheduler = "^1.13.1"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
